Add extensive debug logging to diagnose engine path issues
- Log all searched paths and their status
- List directory contents
- Show APK lib structure
- Send debug messages to frontend for visibility